# normals_transfer

./: .gitignore  CMakeLists.txt  README.md
app/: normals_transfer.cpp
data/: source.ply  target.ply
utils/IO/: readPLY.h  structures.h  writePLY.h
